2008.06.25 oubiwann

* Found the bug documented in ticket #242868
(https://bugs.launchpad.net/txloadbalancer/+bug/242868).
* Removed debugging print statements.

2008.06.25 oubiwann

* Added tests for HostTracking class.
* Added notes to the architecture doc about the relationship of the proxy
classes to one another.
* Added notes to the architecture doc about who talks to who in the proxy
module.
* Added a stub for a read-only admin UI page.
* Added the logic to admin.pages and ProxyManager to enabled read-only pages.

2008.06.24 oubiwann

* Cleaned up TODO, reorganized by milestones.
* Updated architecture diagram.
* Formatted some white space/places for docstrings.
* Removed unused, commented-out code.
* Updated TODO with notes about unit tests.
* Updated README.
* Updated TODO with placeholders.
* Replaced the proxy manager "listeners" attribute with the "proxies"
attribute.
* Added methods to the proxy manager for setting and getting the Twisted
service collections for the proxy TCP services.
* Changed application.setProxies to create a reference on the proxy manager
(director) for the proxy service collection.
* Fixed some imports in schedulers.
* Updated plans for fixing up schedulers.
* Updated plans for examining a general Twisted service load-balancing API.
* Set up commit script to work with the new branch.
* Created an application subpackage and moved txlb.application to
txlb.application.services.
* Created a service module in txlb.application for exploring the viability of
load balancing arbitrary services in a twisted application.
* Removed print statements.
* Added an example .tac file for a load balanced service.
* Took more notes on what's going to be needed in order to support this work.
* Moved the host-tracking code out of schedulers and into manager (temporary
location, while it gets sorted out).

2008.06.23 oubiwann

* Renamed loaders to proxy.
* Moved main.* code into manager.
* Renamed proxy.Director to manager.ProxyManager.